# Server

./: .dockerignore  01_fastapi.config  Dockerfile  Taskfile.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/: __init__.py
src/api/common/: deps.py
src/api/courses/: endpoints.py
src/api/files/: deps.py  endpoints.py
src/api/schedule/: endpoints.py  schemas.py
src/api/schedules/: endpoints.py  schemas.py
src/api/users/: deps.py  endpoints.py  schemas.py
src/apps/: __init__.py
src/apps/courses/: service.py
src/apps/courses/api/: endpoints.py
src/apps/courses/models/: __init__.py  course.py  group.py  lesson.py
src/apps/files/: deps.py  endpoints.py  models.py  service.py
src/apps/files/api/: endpoints.py
src/apps/schedule/: models.py  schedule.py  service.py
src/apps/schedule/api/: endpoints.py  schemas.py
src/apps/shcedule/: service.py
src/apps/shcedule/api/: endpoints.py
src/apps/users/: deps.py  endpoints.py  schemas.py  service.py
src/apps/users/api/: endpoints.py
src/core/: auth.py  base_document.py  error_hanlers.py  middlewares.py  mongo.py  settings.py
src/models/: __init__.py  column_map.py  course.py  group.py  lesson.py  schedule.py  user.py
src/services/: courses.py  files.py  users.py
src/services/schedule/: __init__.py  schedule.py  service.py
